<?xml version="1.0"?>
<package format="2">
  <name>leuze_phidget_driver</name>
  <version>1.0.1</version>
  <description>The phidget interface kit driver package for leuze lasers</description>

  <author email="ludovic.delval@ipa.fraunhofer.de">Ludovic Delval</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</author>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas Kumar Shastha</author>
  <author email="milan.mraz@leuze.com">Milan Mraz</author>
  <maintainer email="milan.mraz@leuze.com">Milan Mraz</maintainer>

  <license>APACHE2.0</license>

  <!-- Use CMAKE to build this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies used when building the code -->
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed by headers exported by the code -->
  <!--<build_export_depend>std_msgs</build_export_depend>-->

  <!-- Mixed-purpose dependencies -->
  <depend>rclcpp</depend>
  <depend>leuze_msgs</depend>


  <!-- ToDo: Add this driver for commissioning of this package in ROS2
  <exec_depend>phidgets_ik</exec_depend> -->

  <!-- Dependencies used for code verification -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
