<?xml version="1.0"?>
<package format="2">
  <name>leuze_ros_drivers</name>
  <version>1.0.1</version>
  <description>The leuze_ros_drivers metapackage</description>

  <author email="ludovic.delval@ipa.fraunhofer.de">Ludovic Delval</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</author>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas Kumar Shastha</author>
  <author email="milan.mraz@leuze.com">Milan Mraz</author>
  <maintainer email="milan.mraz@leuze.com">Milan Mraz</maintainer>

  <license>APACHE2.0</license>

  <!-- Use CMAKE to build this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies used when running the code -->
  <exec_depend>leuze_bringup</exec_depend>
  <exec_depend>leuze_description</exec_depend>
  <exec_depend>leuze_msgs</exec_depend>
  <exec_depend>leuze_rsl_driver</exec_depend>
  <exec_depend>leuze_phidget_driver</exec_depend>

  <!-- Dependencies used for code verification -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>leuze_bringup</test_depend>
  <test_depend>leuze_description</test_depend>
  <test_depend>leuze_msgs</test_depend>
  <test_depend>leuze_rsl_driver</test_depend>
  <test_depend>leuze_phidget_driver</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
