<?xml version="1.0"?>
<package format="2">
  <name>leuze_rsl_driver</name>
  <version>1.0.1</version>
  <description>ROS Driver for the Leuze RSL series laser scanner. </description>

  <author email="ludovic.delval@ipa.fraunhofer.de">Ludovic Delval</author>
  <author email="harshavardhan.deshpande@ipa.fraunhofer.de">Harshavardhan Deshpande</author>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas Kumar Shastha</author>
  <author email="milan.mraz@leuze.com">Milan Mraz</author>
  <maintainer email="milan.mraz@leuze.com">Milan Mraz</maintainer>

  <license>APACHE2.0</license>

  <!-- Use CMAKE to build this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Mixed-purpose dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>leuze_msgs</depend>
  <depend>angles</depend>

  <!-- Dependencies used for code verification -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
